--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt totam repudiandae modi assumenda iusto placeat ducimus aliquid quod cupiditate quaerat?</h4>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam deleniti corrupti quis officia optio vel id eum voluptatibus, nulla, possimus sunt. Minus quas sapiente qui odio corporis obcaecati animi esse molestiae eos officia eaque aperiam tenetur, itaque accusamus iusto! Est natus asperiores ex recusandae, sed blanditiis id repudiandae ipsa, mollitia numquam quia? Recusandae ipsum soluta eum vero, voluptates nesciunt harum! Iure expedita quae dolore officiis. Sapiente veritatis harum illum dignissimos. <br> Perferendis ratione at qui fugit, ipsa distinctio est ullam, provident voluptatibus rem hic. Amet quo, voluptate est accusantium aperiam, explicabo corrupti dignissimos, earum quia enim suscipit tempora. Fugit, repellat natus?</p>
     <!-- lorem part end -->
+    <!-- vertical row by hr -->
     <hr>
     <!-- google map -->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29177.259226792215!2d90.69973452076218!3d23.91947970838058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3754304ce44c5b21%3A0xce082a3c68682738!2sNarsingdi!5e0!3m2!1sen!2sbd!4v1649757517954!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
